--- a/chairman.html
+++ b/chairman.html
@@ -53,7 +53,7 @@
     <script src="./js/main.js"></script>
   </head>
   <body>
-    <header class="header" style="background-color:#002e5f;">
+    <header id="#top" class="header" style="background-color:#002e5f;">
       <a href="#" class="logo"><img src="./images/Logo.jpg" alt="" /></a>
       <div class="fas fa-bars"></div>
       <nav class="navbar">
@@ -146,7 +146,7 @@
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="index.html#about">About us</a>
+                  <a href="about-us.html">About us</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
@@ -226,10 +226,9 @@
         </div>
       </div>
 
-      
+<!--       
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7657.379228295019!2d85.3359463478162!3d27.724071171236503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19f5323fb707%3A0x3bef7b9bf7d42df9!2sSukedhara%20bus%20stop%20%F0%9F%9A%8F!5e0!3m2!1sen!2snp!4v1671213228304!5m2!1sen!2snp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 
-    <a href="#" class="back-to-top"><i class="ion-ios-arrow-up"></i></a>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7657.379228295019!2d85.3359463478162!3d27.724071171236503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19f5323fb707%3A0x3bef7b9bf7d42df9!2sSukedhara%20bus%20stop%20%F0%9F%9A%8F!5e0!3m2!1sen!2snp!4v1671213228304!5m2!1sen!2snp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="container">
         <div class="row align-items-center">
           <div
@@ -242,6 +241,6 @@
         </div>
       </div>
     </div>
-  
+    <a href="#top" class="back-to-top"><i class="ion-ios-arrow-up"></i></a>
   </body>
 </html>
