--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li><a href="#manager">manager</a></li>
         <li><a href="#team">team</a></li>
         <li><a href="careers.html">categories</a></li>
-        <li><a href="#contact">contact</a></li>
+        <li><a href="contact.html">contact</a></li>
         <li><a href="#faq">FAQ</a></li>
       </ul>
     </nav>
@@ -76,7 +76,7 @@
           as deliver a wide range of related professional services. We are
           providing world-class service to our clients.
         </p>
-        <!-- <a href="#" id="chairman"><button class="btn">Read More</button></a> -->
+        <a href="about-us.html" id="chairman"><button class="btn">Read More</button></a>
       </div>
     </div>
   </div>
@@ -309,12 +309,12 @@
         <div class="info">
           <h3>Mr. Raj Kumar Lamsal</h3>
           <span>Chairman</span>
-          <!-- <div class="icons">
+          <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
               <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
               <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
-            </div> -->
+            </div>
         </div>
       </div>
     </div>
@@ -325,13 +325,13 @@
         </div>
         <div class="info">
           <h3>Mr. Souraj Rai</h3>
-          <span>Internaional Marketing Manager</span>
-          <!-- <div class="icons">
+          <span>Int'l Marketing Manager</span>
+          <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
               <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
               <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
-            </div> -->
+            </div>
         </div>
       </div>
     </div>
@@ -343,12 +343,12 @@
         <div class="info">
           <h3>John Doe</h3>
           <span>Technical Officer</span>
-          <!-- <div class="icons">
+          <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
               <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
               <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
-            </div> -->
+            </div>
         </div>
       </div>
     </div>
@@ -360,12 +360,12 @@
         <div class="info">
           <h3>Rose Matthews</h3>
           <span>Receptionist</span>
-          <!-- <div class="icons">
+          <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
               <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
               <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
-            </div> -->
+            </div>
         </div>
       </div>
     </div>
@@ -463,22 +463,25 @@
     <h1 class="heading">get in touch</h1>
   </section>
 
-  <div class="container-fluid bg-primary">
-    <div class="row">
-      <cdiv class="col-lg-6 col-sm-12 m-3">
+<!-- form and map -->
+
+  <div class="container-fluid" id="contact">
+    <div class="row d-flex justify-content-around p-1 custom-form-map">
+      <div class="col-lg-6 col-sm-12 col-md-8 p-3 custom-map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7657.379228295019!2d85.3359463478162!3d27.724071171236503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19f5323fb707%3A0x3bef7b9bf7d42df9!2sSukedhara%20bus%20stop%20%F0%9F%9A%8F!5e0!3m2!1sen!2snp!4v1671213228304!5m2!1sen!2snp"
           width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade">
         </iframe>
     </div>
-    <div class="col-lg-6 col-sm-12 mb-3">
+
+    <div class="col-lg-6 col-sm-12 col-md-10 p-3 custom-map">
       <div class="contact-form">
         <form action="./contactme.php" method="POST">
           <input type="text" name="name" placeholder="Name" class="contact-form-txt" required />
           <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required placeholder="Contact number" maxlength="10"
             class="contact-form-phone" />
-          <input type="email" name="email" placeholder="Email" class="contact-form-email" required />
+          <input type="email" name="email" placeholder="Email" class="contact-form-email"  style="text-transform: lowercase;" required />
           <textarea placeholder="Your Message" name="message" class="contact-form-txtarea" required></textarea>
           <input type="submit" value="Submit" name="submit" class="contact-form-btn" />
         </form>
@@ -503,7 +506,7 @@
               </li>
               <li>
                 <i class="ion-ios-arrow-forward"></i>
-                <a href="#about">About us</a>
+                <a href="/about-us.html">About us</a>
               </li>
               <li>
                 <i class="ion-ios-arrow-forward"></i>
@@ -546,7 +549,7 @@
 
           <div class="col-lg-3 col-md-6 footer-contact" style="font-size: 1.5rem">
             <h4>Contact Us</h4>
-            <p>
+            <p style="text-transform: lowercase;">
               Sukedhara, Kathmandu<br />
               Nepal <br />
               <strong>Phone:</strong> +01-5907848<br />
