--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <p style="font-size: 2rem">See what people have to say about us</p>
       </div>
 
-      <div class="owl-carousel clients-carousel ">
+      <div class="owl-carousel testimonials-carousel ">
         <div class="testimonial-item row align-items-center">
           <div class="testimonial-img">
             <img src="./images/testimonial-1.jpg" alt="Testimonial image" />
@@ -468,14 +468,6 @@
 
     <div class="col-lg-6 col-sm-12 col-md-10 p-3 custom-map">
       <div class="contact-form">
-        <!-- <form action="#" method="POST">
-          <input type="text" name="name" placeholder="Name" class="contact-form-txt" required />
-          <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required placeholder="Contact number" maxlength="10"
-            class="contact-form-phone" />
-          <input type="email" name="email" placeholder="Email" class="contact-form-email"  style="text-transform: lowercase;" required />
-          <textarea placeholder="Your Message" name="message" class="contact-form-txtarea" required></textarea>
-          <input type="submit" value="Submit" name="submit" class="contact-form-btn" />
-        </form> -->
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfvrdSmTWcf0rkiqToaWqg0JzqppfixMcqfwTYPR_iaJuysEg/viewform?embedded=true" width="100%" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
   </div>
