--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <ul>
         <li><a href="#home">home</a></li>
         <li><a href="#about">about</a></li>
-        <li><a href="#portfolio">chairman</a></li>
+        <li><a href="#portfolio">Executive Director</a></li>
         <li><a href="#manager">manager</a></li>
         <li><a href="#team">team</a></li>
         <li><a href="careers.html">categories</a></li>
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="section-head-1 col-sm-12" style="text-align: center">
           <h4 style="margin-top: -5rem" id="portfolio">
-            <span>Words</span> From our Chairman
+            <span>Words</span> From our Executive Director
           </h4>
         </div>
         <div class=" custom-flex mt-2">
@@ -103,7 +103,7 @@
 
             <div class="custom-paragraph col-sm-11 col-md-11 col-lg-7 ">
               <h3 class="mt-5">Mr. Raj Kumar Lamsal</h3>
-              <h3 style="color: green;">Chairman</h3>
+              <h3 style="color: green;">Executive Director</h3>
 
               <p style="text-align: justify;font-size: 16px;">
                 It gives me immense pleasure to introduce my company, Sunrise HR
@@ -299,7 +299,7 @@
         </div>
         <div class="info">
           <h3>Mr. Raj Kumar Lamsal</h3>
-          <span>Chairman</span>
+          <span>Executive Director</span>
           <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -494,7 +494,7 @@
               </li>
               <li>
                 <i class="ion-ios-arrow-forward"></i>
-                <a href="#portfolio">Chairman</a>
+                <a href="#portfolio">Executive Director</a>
               </li>
               <li>
                 <i class="ion-ios-arrow-forward"></i>
