--- a/chairman.html
+++ b/chairman.html
@@ -60,7 +60,7 @@
         <ul>
           <li><a href="index.html#home">home</a></li>
           <li><a href="index.html#about">about</a></li>
-          <li><a href="#">chairman</a></li>
+          <li><a href="#">Executive Director</a></li>
           <li><a href="index.html#manager">manager </a></li>
           <li><a href="index.html#team">team</a></li>
           <li><a href="careers.html">categories</a></li>
@@ -78,7 +78,7 @@
           <div class="row">
             <div class="section-head-1 col-sm-12" style="text-align: center">
               <h4 style="margin-top: -5rem" id="portfolio">
-                <span>Words</span> From our Chairman
+                <span>Words</span> From our Executive Director
               </h4>
             </div>
       <div class=" custom-flex ">
@@ -96,7 +96,7 @@
         </div>
         <div class="custom-paragraph col-sm-12 col-md-12 col-lg-7 ">
           <h3 class="mt-5">Mr. Raj Kumar Lamsal</h3>
-          <h3 style="color: green;">Chairman</h3>
+          <h3 style="color: green;">Executive Director</h3>
   
           <p style="text-align: justify;font-size: 18px;">
             It gives me immense pleasure to introduce my company, Sunrise HR
@@ -150,7 +150,7 @@
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#">Chairman</a>
+                  <a href="#">Executive Director</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
