--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <link rel="stylesheet" href="./css/style.css" />
 
   <!-- bootstrap cdn link inserted by shibu -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
-  <!-- favicon inserted  -->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link rel="icon" href="./images/Logo.jpg" />
 
@@ -29,11 +29,13 @@
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet" />
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
-  <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet" />
+  <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet" /> -->
   <script src="./js/main.js"></script>
 </head>
-
 <body>
+    <pre>under construction .....................!</pre>
+</body>
+<!-- <body>
   <header class="header" id="top">
     <a href="index.html" class="logo"><img src="./images/Logo.jpg" alt="" /></a>
     <div class="fas fa-bars"></div>
@@ -343,7 +345,7 @@
         </div>
       </div>
     </div>
-    <!-- <div class="row">
+   <div class="row">
       <div class="card">
         <div class="image">
           <img src="./images/pexels-andrea-piacquadio-745136.jpg" alt="Team member 1" />
@@ -360,12 +362,12 @@
         </div>
       </div>
     </div> -->
-  </section>
+  <!-- </section> -->
 
 
   <!-- <div class="contact-in"> -->
   <!-- <div class="contact-map"> -->
-  <section class="faq">
+  <!-- <section class="faq">
     <h1 class="heading" style="margin-top: -2rem; color: #00bfff" id="faq">
       FAQ
     </h1>
@@ -443,7 +445,7 @@
         </div>
       </div>
     </div>
-    <!-- download button added  -->
+    download button added 
     <div class="btn">
       <a href="/images/Sunrise-Hr-Solution Brochure.pdf" download class="btn btn-primary">Download Brochure
         <i class="fa fa-download"></i>
@@ -453,10 +455,9 @@
   <section id="contact" class="contact">
     <h1 class="heading">get in touch</h1>
   </section>
+ form and map -->
 
-<!-- form and map -->
-
-  <div class="container-fluid" id="contact">
+  <!-- <div class="container-fluid" id="contact">
     <div class="row d-flex justify-content-around p-1 custom-form-map">
       <div class="col-lg-6 col-sm-12 col-md-8 p-3 custom-map">
         <iframe
@@ -477,16 +478,16 @@
   </div>
 
 
-  <!-- footer started -->
-  <div class="footer">
+   footer started -->
+  <!-- <div class="footer">
     <div class="footer-top">
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>About Us</h4>
             <ul>
-              <li>
-                <i class="ion-ios-arrow-forward"></i> <a href="#">Home</a>
+              <li> -->
+                <!-- <i class="ion-ios-arrow-forward"></i> <a href="#">Home</a>
               </li>
               <li>
                 <i class="ion-ios-arrow-forward"></i>
@@ -529,9 +530,9 @@
                 <i class="ion-ios-arrow-forward"></i> <a href="#faq">FAQ</a>
               </li>
             </ul>
-          </div>
+          </div>  -->
 
-          <div class="col-lg-3 col-md-6 footer-contact" style="font-size: 1.5rem">
+          <!-- <div class="col-lg-3 col-md-6 footer-contact" style="font-size: 1.5rem">
             <h4>Contact Us</h4>
             <p style="text-transform: lowercase;">
               Sukedhara, Kathmandu<br />
@@ -572,7 +573,7 @@
     </div>
   </div>
 
-  <a href="#top" class="back-to-top"><i class="ion-ios-arrow-up"></i></a>
-</body>
+  <a href="#top" class="back-to-top"><i class="ion-ios-arrow-up"></i></a> -->
+
 
 </html>
